--- a/docs/Langages et programmation/CH11_modularite/data/ex_openfoodfacts_corr.ipynb
+++ b/docs/Langages et programmation/CH11_modularite/data/ex_openfoodfacts_corr.ipynb
@@ -68,32 +68,40 @@
        "{'nom': \"Lasagne all'uovo\",\n",
        " 'nutriments': {'carbohydrates': 67.3,\n",
        "  'carbohydrates_100g': 67.3,\n",
+       "  'carbohydrates_serving': 28.3,\n",
        "  'carbohydrates_unit': 'g',\n",
        "  'carbohydrates_value': 67.3,\n",
        "  'carbon-footprint-from-known-ingredients_100g': 50.336,\n",
        "  'carbon-footprint-from-known-ingredients_product': 252,\n",
+       "  'carbon-footprint-from-known-ingredients_serving': 21.1,\n",
        "  'energy': 1554,\n",
        "  'energy-kcal': 367,\n",
        "  'energy-kcal_100g': 367,\n",
+       "  'energy-kcal_serving': 154,\n",
        "  'energy-kcal_unit': 'kcal',\n",
        "  'energy-kcal_value': 367,\n",
        "  'energy-kj': 1554,\n",
        "  'energy-kj_100g': 1554,\n",
+       "  'energy-kj_serving': 653,\n",
        "  'energy-kj_unit': 'kJ',\n",
        "  'energy-kj_value': 1554,\n",
        "  'energy_100g': 1554,\n",
+       "  'energy_serving': 653,\n",
        "  'energy_unit': 'kJ',\n",
        "  'energy_value': 1554,\n",
        "  'fat': 4,\n",
        "  'fat_100g': 4,\n",
+       "  'fat_serving': 1.68,\n",
        "  'fat_unit': 'g',\n",
        "  'fat_value': 4,\n",
        "  'fiber': 3,\n",
        "  'fiber_100g': 3,\n",
+       "  'fiber_serving': 1.26,\n",
        "  'fiber_unit': 'g',\n",
        "  'fiber_value': 3,\n",
        "  'fruits-vegetables-nuts': 0,\n",
        "  'fruits-vegetables-nuts-estimate-from-ingredients_100g': 0,\n",
+       "  'fruits-vegetables-nuts-estimate-from-ingredients_serving': 0,\n",
        "  'fruits-vegetables-nuts_100g': 0,\n",
        "  'fruits-vegetables-nuts_serving': 0,\n",
        "  'fruits-vegetables-nuts_unit': 'g',\n",
@@ -105,22 +113,27 @@
        "  'nutrition-score-fr_100g': -3,\n",
        "  'proteins': 14,\n",
        "  'proteins_100g': 14,\n",
+       "  'proteins_serving': 5.88,\n",
        "  'proteins_unit': 'g',\n",
        "  'proteins_value': 14,\n",
        "  'salt': 0.075,\n",
        "  'salt_100g': 0.075,\n",
+       "  'salt_serving': 0.0315,\n",
        "  'salt_unit': 'g',\n",
        "  'salt_value': 0.075,\n",
        "  'saturated-fat': 1.2,\n",
        "  'saturated-fat_100g': 1.2,\n",
+       "  'saturated-fat_serving': 0.504,\n",
        "  'saturated-fat_unit': 'g',\n",
        "  'saturated-fat_value': 1.2,\n",
        "  'sodium': 0.03,\n",
        "  'sodium_100g': 0.03,\n",
+       "  'sodium_serving': 0.0126,\n",
        "  'sodium_unit': 'g',\n",
        "  'sodium_value': 0.03,\n",
        "  'sugars': 3,\n",
        "  'sugars_100g': 3,\n",
+       "  'sugars_serving': 1.26,\n",
        "  'sugars_unit': 'g',\n",
        "  'sugars_value': 3},\n",
        " 'nutri_score': 'a'}"
@@ -474,7 +487,7 @@
      "output_type": "stream",
      "text": [
       "Produit contenant le plus d'énergie : Granola Gros éclats de Chocolat\n",
-      "Produit contenant le moins de sel : Barilla pates coquillettes\n",
+      "Produit contenant le moins de sel : Barilla pates coquillettes 500g\n",
       "Produit contenant le moins de matières grasses : FuzeTea Thé glacé pêche intense\n",
       "Produit contenant le plus de sucres : Granola Gros éclats de Chocolat\n"
      ]
@@ -484,6 +497,20 @@
     "liste = [7622300689124, 3083680026321, 3302741859105, 5449000232465, 3095756193011, 3261055930422, 8076808140325]\n",
     "comparer_produits(liste)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
